  - Added option "-e <pattern>" to exclude files/dirs. It works for both archiving and extracting.
  - Added support for long options (--option) using getopt_long
  - Removed the dependency on "which" to find the path to a program
  - Accept all libgcrypt versions >= 1.2.4 at runtime in gcry_check_version
* 0.6.2 (2009-12-08):
  - Dynamic memory allocation for ntfs specific extended-attributes in create.c
  - Fix related the the ntfs attributes when lgetxattr returns a negative size
  - Saves the name of the original device where the filesystem is stored (FSYSHEADKEY_ORIGDEV)
  - Fixed enable options in configure: "--enable-xxx" had the opposite effect (Thanks to horhe)
  - Exit with an error if the user wants to use a compression level which is not supported (Thanks to mbiebl)
  - Fixed crash when mount fails (mntbyfsa was set to true and not clear if mount fails)
  - Fixed code for ntfs symlinks (they have to be recreated as normal files and dirs + special attributes)
  - Changed the requirement from ntfs3g-AR (advanced release) to ntfs3g >= 20091114 (standard release) for ntfs
  - Improvements and fixes in the autotools build chain files (contribution from Michael Biebl)
  - Added option "-L" to specify the label of the archive: it's just a comment about the contents
  - Detabified the sources: find . -iname "*.[ch]" -exec sed -i -e "s/[\t]/    /g" -e 's!{    !{   !g' {} \;
* 0.6.1 (2009-10-04):
  - New encryption implementation was not thread-safe (broken when option -j was used)
  - Dropped openssl support (this code was disabled in fsarchiver-0.6.0 anyway)
* 0.6.0 (2009-09-27):
  - Debianized fsarchiver (added the debian directory necessary to build the debian package)
  - Rewrote the encryption support using libgcrypt instead of openssl (fix licensing issues)
  - Added the manpage written by Ilya Barygin (it will be installed by "make install")
* 0.5.9 (2009-08-29):
  - Fixed 'fsarchiver probe' which ignored /dev/dm-0 (first device mapper disk)