@@ -21,12 +21,12 @@
 #include <sys/stat.h>
 #include <fcntl.h>
 #include <unistd.h>
+#include <uuid/uuid.h>
 
 #include "fsarchiver.h"
 #include "dico.h"
 #include "common.h"
 #include "fs_btrfs.h"
-#include "uuid.h"
 #include "filesys.h"
 #include "strlist.h"
 #include "error.h"
@@ -98,7 +98,7 @@ int btrfs_mkfs(cdico *d, char *partition)
 int btrfs_getinfo(cdico *d, char *devname)
 {
     struct btrfs_super_block sb;
-    const char *str;
+    char uuid[512];
     u16 temp32;
     int ret=0;
     int fd;
@@ -132,9 +132,12 @@ int btrfs_getinfo(cdico *d, char *devname)
     dico_add_string(d, 0, FSYSHEADKEY_FSLABEL, (char*)sb.label);
     
     // ---- uuid
-    if ((str=e2p_uuid2str(sb.dev_item.fsid))!=NULL)
-        dico_add_string(d, 0, FSYSHEADKEY_FSUUID, str);
-    msgprintf(MSG_DEBUG1, "btrfs_uuid=[%s]\n", str);
+    /*if ((str=e2p_uuid2str(sb.dev_item.fsid))!=NULL)
+        dico_add_string(d, 0, FSYSHEADKEY_FSUUID, str);*/
+    memset(uuid, 0, sizeof(uuid));
+    uuid_unparse_lower((u8*)sb.dev_item.fsid, uuid);
+    dico_add_string(d, 0, FSYSHEADKEY_FSUUID, uuid);
+    msgprintf(MSG_DEBUG1, "btrfs_uuid=[%s]\n", uuid);
     
     // ---- sector size
     temp32=le32_to_cpu(sb.sectorsize);
