@@ -20,13 +20,13 @@
 #include <sys/stat.h>
 #include <fcntl.h>
 #include <unistd.h>
+#include <uuid/uuid.h>
 
 #include "fsarchiver.h"
 #include "fsarchiver.h"
 #include "dico.h"
 #include "common.h"
 #include "fs_reiserfs.h"
-#include "uuid.h"
 #include "filesys.h"
 #include "strlist.h"
 #include "error.h"
@@ -67,7 +67,7 @@ int reiserfs_mkfs(cdico *d, char *partition)
 int reiserfs_getinfo(cdico *d, char *devname)
 {
     struct reiserfs_super_block sb;
-    const char *str;
+    char uuid[512];
     u16 temp16;
     int ret=0;
     int fd=-1;
@@ -109,9 +109,12 @@ int reiserfs_getinfo(cdico *d, char *devname)
     dico_add_string(d, 0, FSYSHEADKEY_FSLABEL, (char*)sb.s_label);
     
     // ---- uuid
-    if ((str=e2p_uuid2str(sb.s_uuid))!=NULL)
-        dico_add_string(d, 0, FSYSHEADKEY_FSUUID, str);
-    msgprintf(MSG_DEBUG1, "reiserfs_uuid=[%s]\n", str);
+    /*if ((str=e2p_uuid2str(sb.s_uuid))!=NULL)
+        dico_add_string(d, 0, FSYSHEADKEY_FSUUID, str);*/
+    memset(uuid, 0, sizeof(uuid));
+    uuid_unparse_lower((u8*)sb.s_uuid, uuid);
+    dico_add_string(d, 0, FSYSHEADKEY_FSUUID, uuid);
+    msgprintf(MSG_DEBUG1, "reiserfs_uuid=[%s]\n", uuid);
     
     // ---- block size
     temp16=le16_to_cpu(sb.s_v1.s_blocksize);
